# JetSimulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  configure  debug  init.sh
assets/models/f14/: f14GearDown.dae  f14GearUp.dae
assets/models/su27/: su27.dae  su27e.dae  untitled.dae
assets/shaders/: phong.fs.glsl  phong.vs.glsl  screen.fs.glsl  screen.vs.glsl  skybox.fs.glsl  skybox.vs.glsl
assets/skyboxes/mp_deception/: mp_deception.shader
common/: application.cpp  application.hpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  shader.hpp  simple_mesh.cpp  simple_mesh.hpp  vertex.h
include/: JetSimulator.hpp  Key.hpp  System.hpp
include/App/: App.hpp  JetSimulator.hpp
include/Cameras/: Camera.hpp  ModelTrackingCamera.hpp
include/Models/: Jet.hpp  Missile.hpp  SkyBox.hpp
include/Scene/: Material.hpp  Mesh.hpp  Model.hpp  Node.hpp
include/Shaders/: Effects.hpp  PhongShader.hpp  Shader.hpp
include/Textures/: CubeMapTexture.hpp  Image.hpp  Texture.hpp  Texture2D.hpp
src/: Application.cpp  Application.hpp  Jet.cpp  Jet.hpp  JetSimulator.cpp  JetSimulator.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Node.cpp  Node.hpp  PhongShader.cpp  PhongShader.hpp  Shader.cpp  Shader.hpp  System.cpp  Texture.cpp  Texture.hpp  main.cpp
src/App/: AbstractApp.cpp  AbstractApp.hpp  App.cpp  App.hpp  JetSimulator.cpp  JetSimulator.hpp
src/Cameras/: Camera.cpp  Camera.hpp  ModelTrackingCamera.cpp  ModelTrackingCamera.hpp
src/Models/: Jet.cpp  Jet.hpp  Missile.cpp  Missile.hpp  SkyBox.cpp  SkyBox.hpp
src/Renderer/: Effect.h  Framebuffer.h  Renderer.h
src/Scene/: Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Node.cpp  Node.hpp  Texture.cpp
src/Shaders/: PhongShader.cpp  PhongShader.hpp  Shader.cpp  Shader.hpp
src/Textures/: CubeMapTexture.cpp  Image.cpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp
src/Wrappers/: AssimpWrapper.cpp  AssimpWrapper.hpp  OpenalWrapper.cpp  OpenalWrapper.hpp
test/: main.cpp
